libavfilter/decimate: Add pts of first frame to all frames.

Fixes ticket #3019

Reviewed-by: Clément Bœsch